# cppdsp

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
lib/: DCBlock.cpp  DCBlock.h  EnvGen.cpp  EnvGen.h  KickSynth.cpp  KickSynth.h  Player.cpp  Player.h  SinOsc.cpp  SinOsc.h  Synth.cpp  Synth.h
tests/EnvGen/: CMakeLists.txt  Makefile  plot.py  plot_envelope.cpp
